Fixed css to get rid of white space.

--- a/src/common.css
+++ b/src/common.css
@@ -5,7 +5,7 @@
 
 .img-container {
   display: grid;
-  height: 100%;
+  height: 100vh;
   background-color: black;
 }
 
